[gd_scene load_steps=13 format=2]

[ext_resource path="res://Backgrounds/Cover.jpg" type="Texture" id=1]
[ext_resource path="res://Buttons/PlayButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buttons/HowToPlayButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Backgrounds/Laki-laki.png" type="Texture" id=5]
[ext_resource path="res://Backgrounds/Perempuan.png" type="Texture" id=6]
[ext_resource path="res://Buttons/InfoButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Buttons/SoundButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Menus/MainMenu2.gd" type="Script" id=9]
[ext_resource path="res://Popup/Kompetensi.tscn" type="PackedScene" id=10]
[ext_resource path="res://Buttons/InfoButton.gd" type="Script" id=11]
[ext_resource path="res://Buttons/ExitButton.gd" type="Script" id=12]

[node name="MainMenu2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="Sprite" parent="."]
scale = Vector2( 0.474924, 0.412351 )
texture = ExtResource( 1 )
centered = false

[node name="PlayButton" parent="." instance=ExtResource( 2 )]
margin_left = 688.823
margin_top = 661.255
margin_right = 2298.83
margin_bottom = 1438.26
rect_scale = Vector2( 0.25, 0.25 )
path_to_new_scene = "res://Menus/SelectLevel.tscn"

[node name="ExitButton" parent="." instance=ExtResource( 3 )]
margin_left = 944.598
margin_top = 869.855
margin_right = 300.598
margin_bottom = 545.855
rect_scale = Vector2( 0.25, 0.25 )
script = ExtResource( 12 )

[node name="HowToPlayButton" parent="." instance=ExtResource( 4 )]
margin_left = 1187.97
margin_top = 656.0
margin_right = 2820.97
margin_bottom = 1456.0
rect_scale = Vector2( 0.25, 0.25 )
path_to_new_scene = "res://Menus/Tutorial.tscn"

[node name="InfoButton" parent="." instance=ExtResource( 7 )]
margin_left = 42.8373
margin_top = 40.3175
margin_right = -1422.16
margin_bottom = -284.683
rect_scale = Vector2( 0.2, 0.2 )
script = ExtResource( 11 )

[node name="SoundButton" parent="." instance=ExtResource( 8 )]
margin_left = 2036.03
margin_top = 30.2381
margin_right = 570.032
margin_bottom = -294.762
rect_scale = Vector2( 0.2, 0.2 )

[node name="Cowo" type="Sprite" parent="."]
position = Vector2( 2500.6, 800 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="Cewe" type="Sprite" parent="."]
position = Vector2( -228.552, 800.6 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
flip_h = true

[node name="Kompetensi" parent="." instance=ExtResource( 10 )]
margin_left = 546.854
margin_top = 246.277
margin_right = 1691.85
margin_bottom = 951.277

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
